--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, 'Клиент') %>
+
 <head>
   <meta charset="utf-8">
   <title>jQuery UI Accordion - Default functionality</title>
@@ -69,68 +71,56 @@ document.getElementById("#clname").disabled=true;
   </script>
 </head>
 
-
-<div class="row">
-	
-			<div class="small-2 large-4 columns">
-				
-			</div>
-  			<div class="small-4 large-4 columns">
-  				<center></center>
-  			</div>
-  			<div class="small-6 large-4 columns"></div>	  
-        </div>
-
-<%= button_to "Назад", clients_path,:method => :get, :class=>"button tiny"%>
-<center>
-  
-  
   <div class="row">
-  <div class="medium-6 columns">
-  <div class="panel">
-  	<p>Редактировать профиль клиента</p>
-  	<% @my_arr = [1,2,3,4,5]%>
-  	<%= form_for @client do |f| %>
-  	<%= f.label :"Фамилия"%>
-  	<%= f.text_field :sname%>
-  	<%= f.label :"Имя"%>
-  	<%= f.text_field :name%>
-  	<%= f.label :"Отчество"%>
-  	<%= f.text_field :fname%>
-  	<%= f.label 'Серия и номер паспорта' %>
-    <%= f.text_field :pseria %>
-    <%= f.label 'Дата выдачи' %>
-    <%= f.text_field :dn,:value => DateTime.now.strftime('%d.%m.%Y'),:id => "dt2"%>
-  	</div>
-  </div>
-  <div class="medium-6 columns">
-  	<div class="panel">
-  	<%= f.label 'Персональный номер' %>
-    <%= f.text_field :idno%>
-    <%= f.label 'Год рождения'%>
-    <%= f.text_field :bdate,:value => DateTime.now.strftime('%d.%m.%Y'),:id => "dt3" %>
-    <%= f.label 'Страна проживания' %>
-    <%= f.country_select(:country, 
-    priority_countries: ["RU", "MD", "IT","RO","GB","DE","FR","es","nl"],selected: "MD")%>
-    <%= f.label 'Адрес проживания' %>
-   	<%= f.text_field :address %>
-   	<%= f.label 'E-mail' %>
-   	<%= f.text_field :pemail %>
-   	<%= f.label 'Контактный телефон' %>
-   	<%= f.text_field :tel %>
-   	<%= f.label 'Примечание' %>
-   	<%= f.text_area :comments,size: "30x4" %>
-  </div>
-</div>
-</div>
-  
+  	<div class="panel panel-info">
+  	  <p><div class="panel-heading"><strong>Редактирование клиента:</strong></div></p>	
+		  	
+		<%= form_for @client do |f| %>
 
-<center>  
-  	<%= f.submit "Сохранить клиента" %>
-</center>  	
-  	<% end %>
-  	
+		  <div class="large-6 columns">
+		  <div class="panel  panel-default">		  	
+		  	<div class="panel-body">
+			  	<%= f.label :"Фамилия"%>
+			  	<%= f.text_field :sname%>
+			  	<%= f.label :"Имя"%>
+			  	<%= f.text_field :name%>
+			  	<%= f.label :"Отчество"%>
+			  	<%= f.text_field :fname%>
+			  	<%= f.label 'Серия и номер паспорта' %>
+			    <%= f.text_field :pseria %>
+			    <%= f.label 'Дата рождения'%>
+			<!--    <%= f.text_field :bdate,:value => if @client.bdate.nil? then Date.today.to_formatted_s(:dday_month_year) else @client.bdate.to_date.to_formatted_s(:dday_month_year) end,:id => "dt3" %> -->
+			    <%= f.date_select :bdate, @client.bdate.to_date %> 			    
+			    <%= f.label 'Дата выдачи' %>
+			    <%= f.text_field :dn,:value => if @client.dn.nil? then Date.today.to_formatted_s(:dday_month_year) else @client.dn.to_date.to_formatted_s(:dday_month_year) end, :id => "dt2"%>
+			</div>
+		    </div>
+		    </div>
+    
+		    <div class="large-6 columns">
+		    <div class="panel  panel-default">
+		    <div class="panel-body">
+			    <%= f.label 'IDNP' %>
+			    <%= f.text_field :idno%>		    	
+		    	<p>	
+			    <%= f.label 'Страна' %>
+			    <%= f.country_select(:de, priority_countries: ["RU", "MD", "IT","RO","GB","DE","FR","es","nl"], selected: if !@client.de.nil? then @client.de else "MD" end)%>
+			    </p>
+			    <%= f.label 'Адрес' %>
+			   	<%= f.text_field :address %>
+			   	<%= f.label 'E-mail' %>
+			   	<%= f.text_field :pemail %>
+			   	<%= f.label 'Контактный телефон' %>
+			   	<%= f.text_field :tel %>
+			   	<%= f.label 'Примечание' %>
+			   	<%= f.text_area :comments,size: "30x2" %>
+			</div>
+		  	</div>
+		  	</div>
   
+        	<center><%= f.submit "Сохранить", class: "btn btn-primary" %></center> 	
+  	     <% end %>
   
-	
-
+    </div> <!--panel-->		
+  </div><!--row-->  
+   	
