--- a/app/views/cars/smonth.html.erb
+++ b/app/views/cars/smonth.html.erb
@@ -1,140 +1,8 @@
-<head>
-<% year = Date.today.to_s[0..3].to_i %>
-<% month = Date.today.to_s[5..6].to_i %>
-<% day = Date.today.to_s[8..9].to_i %>
+<% provide(:title, 'График') %>
 
-<script>
-
-</script>
-
-</head>
-<html>
-	
-
-<body onload="myFunction()">  
-	<center>
-		<% md = day.to_s + "." + month.to_s + "." + year.to_s %>
-		
-		<div class="row">
-  <div class="medium-3 columns">
-  	
-  </div>
-  <div class="medium-3 columns">
-  	
-  	
-  </div>
-  <div class="medium-3 columns"></div>
-		</div>
-		
-		<div class="row">
-			<div class="small-2 large-3 columns">
-				<%= link_to 'Клиенты' , clients_path,:class =>"button tiny" %>
-				
-			</div>
-  			<!-- ><div class="small-3 large-3 columns">
-  				<%= select_tag :assignee_id, options_for_select([["2016",1],["2017",2]]), 
-          :onchange => :smonth,:num => @i,:class=>"button tiny" %>
-  			</div>  -->
-  			<div class="small-3 large-3 columns">
-  				<%= button_to 'ТО авто' , car_autotech_path,:class =>"button tiny" %>
-  			</div>	
-  			<div class="small-3 large-3 columns">
-  				<%= button_to 'Бронь' , car_rez_path,:class =>"button tiny" %>
-  			</div>	
-  			<div class="small-3 large-3 columns">
-  				<%=  button_to 'Новый контракт',car_contractnew_path, :class=>"button tiny"%>
-  			</div>	  
-        </div>  
-		<div class="row">
-		<%if current_user.name = "admin" %>
-		 
-		<% end %>	
-			<div class="small-25 columns">
-				<%= form_for :cparam, url: cparams_path do |f| %>
-			<center>
-  			<div class="small-2 columns">Курс USD:<%= f.text_field :curs, :value => @cpar.curs %>
-  				<%= f.submit "Сохранить" %>
-  			</div>
- 				</center>	
-  				<% end %>	
-			</div>
-		</div>		
-    	<center>
-  <div class="small-25 columns">
-  		<table  border="0" cellspacing="5" cellpadding="5">
-		<thead>
-			<tr>
-			   
-				Месяц	
-				<% @i=1
-				while @i<13
-				%>	
-				<% if @i == @mn.to_i%>	
-			      <th bgcolor="orange"><%= link_to @i,:action => :smonth,:num => @i %> </th>
-				<% else %>
-			      <th ><%= link_to @i,:action => :smonth,:num => @i %> </th>
-				<% end %>		
-				<% @i=@i+1 %>
-				<% end	%>
-				
-				<!--		
-				<th id="t1" ><%= link_to "Январь",:action => :smonth,:num => 1 %> </th>
-				<th id="t2"><%= link_to "Февраль",:action => :smonth,:num => 2 %></th>
-				<th id="t3"><%= link_to "Март",:action => :smonth,:num => 3 %></th>
-				<th id="t4"><%= link_to "Апрель",:action => :smonth,:num => 4 %></th>
-				<th id="t5"><%= link_to "Май",:action => :smonth,:num => 5 %></th>
-				<th id="t6"><%= link_to "Июнь",:action => :smonth,:num => 6 %></th>
-				<th id="t7"><%= link_to "Июль",:action => :smonth,:num => 7 %></th>
-				<th id="t8"><%= link_to "Август" ,:action => :smonth,:num => 8%></th>
-				<th id="t9"><%= link_to "Сентябрь",:action => :smonth,:num => 9 %></th>
-				<th id="t10"><%=link_to "Октябрь",:action => :smonth,:num => 10 %></th>
-				<th id="t11"><%=link_to "Ноябрь",:action => :smonth,:num => 11 %></th>
-				<th id="t12"><%=link_to "Декабрь",:action => :smonth,:num => 12 %></th>
-					-->
-			</tr>	
-		</thead>
-		</table>
-		</div>
-		</center>
-		   
-  </div>
-  			     
- </center> 
-	
-	<% if ((@mn.to_i == 11) || (@mn.to_i == 9) || (@mn.to_i == 6) || (@mn.to_i == 4)) %>
-	<%	daycount = 30  %>
-	<% elsif @mn.to_i == 2 %>
-		<% if Date.today.leap? %>
-		<% daycount = 29 %>
-		<% else %>
-		<%	daycount = 28  %>
-		<% end %>
-	<% else %>
-	<% daycount = 31   %>
-	<% end %>
-	<% daycount %>
-	<% ndate = Date.today.to_date%>
-	<% @fl = 0 %>	
-	
-		<% @broni = Contract.where(:flag => 1) %>
-		<% k = 0 %>
-		<% while  k < @qord.count %>
-		<% if (@qord[k+2].to_i == 1) and (@qord[k+3].to_date == ndate) %>
-		   <% if @qord[k+2].to_i == 1 %>
-			 <% @fl = 1%>	
-			 <% break %>
-		  <% end %>	 
- 		<% end %>
- 		<% k = k + 5%>
- 		<% end %>
-		
-<center>	
-		
-	
 	<% if @fl == 1%>	
-	
-		<h4 style="color: blue">Брони в работу на сегодня</h4>
-		<table id="b1">
+		<h4 style="color: blue" align="center">Брони в работу на сегодня</h4>
+		<table id="b1" class="table table-bordered table-condensed table-hover">
 			<thead>
 				<tr>
 					<th>No</th>
@@ -145,79 +13,90 @@
 					<th>Время окончания</th>
 					<th>Агент</th>
 					<th>Пробег</th>
-					<th>Гарантийна сумма</th>
+					<th>Гарантийная сумма</th>
 					<th>Сумма договора</th>
 					<th></th>
 				</tr>
 			</thead>
-			<tbody>
-					
-					<% @cars.each do |mobil| %>
-					
-						<% mobil.contracts.each do |con|%>
-						
+			<tbody>			
+				<% @cars.each do |mobil| %>
+					<% mobil.contracts.each do |con|%>		
 						<% if con.order_date.to_date == Date.today.to_date %>
-						<% if con.flag == 1%>
-						<%= form_tag '/rez_to_contract' do %>
-							<tr><td><%= con.id %></td>
-							<td><%= mobil.marca + " " + mobil.gnum%></td>
-							<td><%= Date.today.to_date.strftime("%d.%m.%Y") %></td>
-							<td><%= text_field_tag 'sttime', Time.now.strftime('%R') %></td>
-							<td><%= text_field_tag 'enddate', con.diff %></td>
-							<td><%= text_field_tag 'endtime', Time.now.strftime('%R') %></td>
-							<td><%= con.user %></td>
-							<td><a  style="color: red">
-							<%= text_field_tag 'wlong', if mobil.wlongs.last
- 								mobil.wlongs.last.wlong
- 							end	 %>		
-							
- 							</a>	</td>
- 							
- 							<td><%= text_field_tag 'garant_summ',con.garant_summ,:class=>"cost_tag" %></td>
-							
-    							
-        						<% coid = con.id %>
-        						<%= hidden_field_tag 'contrid', coid  %>
-							
-							<td><%= text_field_tag 'summ',con.summ,:class=>"cost_tag" %></td>
-							
-						    
-							<% @sttime %>
-							<%  %>
-							
-							<td><%= submit_tag "Открыть" %></td>
+						    <% if con.flag == 1%>
+						        <%= form_tag '/rez_to_contract' do %>
+									<tr>
+									<td><%= con.id %></td>
+									<td><%= mobil.marca + " " + mobil.gnum%></td>
+									<td><%= Date.today.to_date.strftime("%d.%m.%Y") %></td>
+									<td><%= text_field_tag 'sttime', Time.now.strftime('%R') %></td>
+									<td><%= text_field_tag 'enddate', con.diff %></td>
+									<td><%= text_field_tag 'endtime', Time.now.strftime('%R') %></td>
+									<td><%= con.user %></td>
+									<td><a style="color: red"><%= text_field_tag 'wlong', if mobil.wlongs.last then mobil.wlongs.last.wlong end %></a></td>
+	 							    <td><%= text_field_tag 'garant_summ',con.garant_summ,:class=>"cost_tag" %></td>
+	        						<%= hidden_field_tag 'contrid', con.id  %>
+								    <td><%= text_field_tag 'summ',con.summ,:class=>"cost_tag" %></td>
+								    <td><%= submit_tag("Открыть", class: "btn btn-primary") %></td>
+								    </tr>
+								<% end %>						
 							<% end %>
-							</tr>
-							
-						
 						<% end %>
-						<% end %>
-						<% end %>	
-					<% end %>
+					<% end %>	
+				<% end %>
 			</tbody>	
-			</table>
-			<% end %>	
-						<% enddate = day.to_s %>
-						<% enddate = enddate.to_s+ "." + month.to_s %>
-						<% enddate = enddate.to_s + "."+ year.to_s%>
-						<% enddate%>	
-		
-		<% k = 0 %>
-		<% while  k < @qord.count %>
-		<% if (@qord[k+2].to_i == 2) and (@qord[k+4].to_date == ndate) %>
-		   <% if @qord[k+2].to_i == 2 %>
-			 <% @fl1 = 2%>	
-			 <% break %>
-		  <% end %>	 
- 		<% end %>
- 		<% k = k + 5%>
- 		<% end %>
- 		
-		
-		<% if @fl1 == 2%>
-		
-		<h4 style="color: blue">Контракты к закрытию на сегодня</h4>
-		<table id="b1">
+		</table>
+	<% end %>
+	
+	<% if @fl2 == 1 %>	
+		<h4 style="color: blue" align="center">Брони в работу на завтра</h4>
+		<table id="b1" class="table table-bordered table-condensed table-hover">
+			<thead>
+				<tr>
+					<th>No</th>
+					<th>Автомобиль</th>
+					<th>Дата начала</th>
+					<th>Время начала</th>
+					<th>Дата окончания</th>
+					<th>Время окончания</th>
+					<th>Агент</th>
+					<th>Пробег</th>
+					<th>Гарантийная сумма</th>
+					<th>Сумма договора</th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>			
+				<% @cars.each do |mobil| %>
+					<% mobil.contracts.each do |con|%>		
+						<% if con.order_date.to_date == Date.tomorrow.to_date %>
+						    <% if con.flag == 1%>
+						        <%= form_tag '/rez_to_contract' do %>
+									<tr>
+									<td><%= con.id %></td>
+									<td><%= mobil.marca + " " + mobil.gnum%></td>
+									<td><%= Date.today.to_date.strftime("%d.%m.%Y") %></td>
+									<td><%= text_field_tag 'sttime', Time.now.strftime('%R') %></td>
+									<td><%= text_field_tag 'enddate', con.diff %></td>
+									<td><%= text_field_tag 'endtime', Time.now.strftime('%R') %></td>
+									<td><%= con.user %></td>
+									<td><a style="color: red"><%= text_field_tag 'wlong', if mobil.wlongs.last then mobil.wlongs.last.wlong end %></a></td>
+	 							    <td><%= text_field_tag 'garant_summ',con.garant_summ,:class=>"cost_tag" %></td>
+	        						<%= hidden_field_tag 'contrid', con.id  %>
+								    <td><%= text_field_tag 'summ',con.summ,:class=>"cost_tag" %></td>
+								    <td><%= submit_tag("Открыть", class: "btn btn-primary") %></td>
+								    </tr>
+								<% end %>						
+							<% end %>
+						<% end %>
+					<% end %>	
+				<% end %>
+			</tbody>	
+		</table>
+	<% end %>	
+			
+	<% if @fl1 == 2%>	
+		<h4 style="color: blue" align="center">Контракты к закрытию на сегодня</h4>
+		<table id="b1" class="table table-bordered table-condensed table-hover">
 			<thead>
 				<tr>
 					<th>No</th>
@@ -231,151 +110,115 @@
 				</tr>
 			</thead>
 			<tbody>
-					<% @cars.each do |mobil| %>
-						<% mobil.contracts.each do |con|%>
+				<% @cars.each do |mobil| %>
+					<% mobil.contracts.each do |con|%>
 						<% if con.diff.to_date == Date.today.to_date %>
-						<% if con.flag == 2%>
-						<%= form_tag '/contract_to_arh' do %>
-						<%= hidden_field_tag 'contrfid', con.id  %>
-			<tr><td><%= link_to con.id,  contract_path(con,:format => "doc")%></td>
-							<td><%= mobil.marca + " " + mobil.gnum%></td>
-							<td><%= con.order_date.to_date.strftime("%d.%m.%Y") %></td>
-							<td><%= con.diff %></td>
-							<td><%= text_field_tag "fendtime",Time.now.strftime('%R'),:class=>"cost_tag"  %></td>
-							<td><a  style="color: red">
-							<%= text_field_tag 'wlongend', if mobil.wlongs.last
- 								mobil.wlongs.last.wlong
- 							end	 %>		
-							
- 							</a>	</td>
-							<td><%= con.user %></td>
-							
-								<% coid = con.id%>
-							<td><%= submit_tag "Закрыть" %></td>
-							</tr>
+							<% if con.flag == 2%>
+								<%= form_tag '/contract_to_arh' do %>
+									<%= hidden_field_tag 'contrfid', con.id  %>
+									<tr>
+									<td><%= link_to con.id,  contract_path(con,:format => "doc")%></td>
+									<td><%= mobil.marca + " " + mobil.gnum%></td>
+									<td><%= con.order_date.to_date.strftime("%d.%m.%Y") %></td>
+									<td><%= con.diff %></td>
+									<td><%= text_field_tag "fendtime",Time.now.strftime('%R'),:class=>"cost_tag"  %></td>
+									<td><a  style="color: red"><%= text_field_tag 'wlongend', if mobil.wlongs.last then mobil.wlongs.last.wlong end	%></a></td>
+							        <td><%= con.user %></td>
+									<td><%= submit_tag("Закрыть", class: "btn btn-primary") %></td>
+									</tr>
+								<% end %>
 							<% end %>
-						<% end %>
 						<% end %> 
-						<% end %>	
-					<% end %>
-			</tbody>	
-			</table>	
-			<% end %>
-		
-			<h4 style="color: blue">Текущие брони и контракты по машинам</h4>
-	<table id="m1"> <!-- </table> border="0" cellspacing="5" cellpadding="5">  -->	
-		<thead>	
-		<tr><!-- <%= @buz.to_s %> -->
-			<th>No</th>
-			<th>Автомобиль</th>
-			<% md =0%>
-			<% nd =0%>
-			<% n=1 %>
-				<% while n<= daycount do %>
-				<% md = n.to_s + "." + @mn.to_s + "." + year.to_s %>
-				<% nd = Date.parse(md).wday %>
-					<% if ((n == day) and (month.to_i == @mn.to_i))%>
-					<th bgcolor="orange"><%= n %></th>
-					<% elsif  (nd == 0)%>
-					<th bgcolor="red"><%= n  %></th>
-					<% elsif  (nd == 6)%>
-					<th bgcolor="red"><%= n %></th>
-					<%else%>        
-					<th ><%= n %></th>
-					<%end%>
-  					<% n += 1 %>
-				<% end %>
-		</tr>
-		</thead>
-		<tbody>
-		<% carnum=0 %>
-			<% n1=0 %>
-		<% @cars.each do |fc| %>	
-		<tr>
-			<td><%= carnum+1%></td>
-			<td><%= link_to fc.marca.to_s + " " +fc.gnum.to_s, car_path(fc) %></td>
-				<% if ((@mn.to_i == 11) || (@mn.to_i == 9) || (@mn.to_i == 6) || (@mn.to_i == 4)) %>
-	<%	daycount = 30  %>
-	<% elsif @mn.to_i == 2 %>
-		<% if Date.today.leap? %>
-		<% daycount = 29 %>
-		<% else %>
-		<%	daycount = 28  %>
-		<% end %>
-	<% else %>
-	<% daycount = 31   %>
-	<% end %>
-		<% drec = 1 %>
-		<% ind = 0 %>
-		<% while drec <= daycount do %>
-			<% tmpdate = drec.to_s+ "." + @mn.to_s + "." + year.to_s %>
-			<% @prn = 0 %>
-			<% ind = 0 %>
-				   <% while (ind < (@qord.count)) do %>
-     <% if ((@qord[ind] == carnum+1) and ((tmpdate.to_date >= @qord[ind+3].to_date)and(tmpdate.to_date <= @qord[ind+4].to_date))) %>
-        <% if @qord[ind+2].to_i == 2 %>
-			<td bgcolor="green"><%= link_to  "К" %></td>
-			<% @prn = 1 %>
-			<%break%>
-		<% end %>
-		<% if @qord[ind+2].to_i == 1 %>
-			<td bgcolor="magenta"><%= link_to 'Б' %></td>
-			<% @prn = 1 %>
-			<%break%>
-		<% end %>
-		<% if @qord[ind+2].to_i == 3 %>
-			<td bgcolor="silver"><%= link_to 'X' %></td>
-			<% @prn = 1 %>
-			<%break%>
-		<% end %>	
-	<% end %>
-					<% ind += 5 %>
-					<% end %>			
-			  <% if @prn == 0 %>
-			  	<td bgcolor="white"></td>
-			  <% end %>      
-   		    <% drec += 1 %>
-		<% end %>		
-					
-				<!-- <% str = n.to_s %>
-									<% if n < 10 %>
-						<% str = '0'.to_s + str.to_s  %>
 					<% end %>	
-						<% if (@buz[n1].to_s.include? str)%>
-							<% t = n %>
-							<% t1 = n %>
-								 <% while t1 < (t + @buz1[n1].to_i)  %>
-									
-									<% if ((@mn.to_i == month) and (t1>=day) and (@buz2[n1]==1)) %>
-									<td bgcolor="red"><%= link_to "Б"%></td>
-									<% else %>
-									<% while t1 < (t + @buz1[n1].to_i) and (t1<32) %>
-										<td bgcolor="green"><%= link_to "К"%></td>
-										<% t1= t1+1 %>
-										<% n += 1 %>
-									<% end %>
-									<td bgcolor="white"></td>
-									<% end %>
-									<% t1 = t1 + 1 %>
-									<% n += 1 %>
+				<% end %>
+			</tbody>	
+		</table>	
+	<% end %>
+			
+	<h4 align="center">Текущие брони и контракты по машинам <% if @filter==1 then %><span class="glyphicon glyphicon-filter" aria-hidden="true"></span><% end %></h4>
+	
+	<nav class="navbar">
+	  <ul class="nav nav-pills pull-left">
+		<li><%= form_tag("/cars/smonth", method: "get", class: 'form-inline') do %>
+	    	<div class="form-group">
+			  <%= select_tag(:qmarca, options_for_select(@fmarcas, @qmarca), class: "form-control", prompt: "Марка...", include_blank: false, title: "Марка") %>
+			  <%= submit_tag("Фильтр", class: "btn btn-primary", name: "filter", title: "фильтр") %>
+			</div>
+			<% end %>
+		</li>
+		<li><%= form_tag("/cars/smonth", method: "get", class: 'form-inline') do %>
+	    	<div class="form-group">
+			  <%= search_field_tag(:q, @data_for_search, placeholder: 'Enter your search query here', class: "form-control", title: "машина", size: "20x1") %>
+			  <%= submit_tag("Поиск", class: "btn btn-primary", name: "search", title: "поиск") %>
+			</div>
+			<% end %>
+		</li>				    
+	  </ul>  
+	</nav>
+		
+	<div align="center">
+	  <!-- Nav tabs -->
+	  <ul class="nav nav-tabs" role="tablist" id="myTab">
+		<% (1..12).each do |i| %>
+			<% if @months[i-1] == @currentdate then %><li role="presentation" class="active"><% else %><li role="presentation"><% end %>
+			<a href="#<%= i %>" aria-controls="<%= i %>" role="tab" data-toggle="tab" class="label label-info">
+		   <% if @months[i-1] == @currentdate then %><span class="badge"><% end %><%= "#{@months[i-1].to_formatted_s(:month_year)}" %><% if @months[i-1] == @currentdate then %></span><% end %></a></li>	
+		<% end	%>	  	
+	  </ul>	
+	  <!-- Tab panes -->
+	  <div class="tab-content">
+	  	<% (1..12).each do |i| %>
+		    <!-- one month table -->
+		    <% titleitem = @title1[i-1] %>
+		    <% reportitem = @report1[i-1] %>
+		    <% daycount = titleitem.size - 2 %>
+		    <div role="tabpanel" class="<%= if @months[i-1] == @currentdate then "tab-pane fade in active" else "tab-pane fade" end %>" id="<%= "#{i}" %>" >
+		    	<br>		
+				<div class="table-responsive">	
+				<table class="table table-bordered table-condensed table-hover">
+					<thead>	
+					<tr>
+						<th><center>№</center></th>
+						<th align="center"><center>Автомобиль</center></th>
+						<% (0..(daycount-1)).each do |d| %>
+							<th class=<%= case (titleitem[d+2]) when 2 then "warning" when 1 then "danger" else "" end %>>
+							<center><font color=<%= case (titleitem[d+2]) when 2 then "orange" when 1 then "red" else "" end %>><%= d+1 %></font></center></th>
+						<% end %>	
+					</tr>
+					</thead>
+					<tbody>
+						<% reportitem.each do |r| %>	
+							<tr>
+							<td><center><%= r[0] %></center></td>
+							<td><%= link_to "#{r[1]}", car_path(r[daycount+2]) %></td>
+							<% (0..(daycount-1)).each do |d| %>
+								<td title="<%= (@months[i-1]).change(day: (d+1)).to_formatted_s(:dday_month_year) %>" 
+									               id=<%= case when (r[d+2]==1) then "bbroni" when (r[d+2]==2) then "ccontract" else "zzz" end %>  
+								                   class=<%= case when (r[d+2]==1) then "danger" 
+									               when (r[d+2]==2) then "info" 
+									               when (r[d+2]==3) then "success"
+									               when (titleitem[d+2]==1) then "danger"
+									               when (titleitem[d+2]==2) then "warning" 	 	 
+									               else "" end %>>
+								<center>
+								<% case (r[d+2]) when 1 then %><b><%= link_to "Б" , '#', id: "bbroni" %></b>
+								<%               when 2 then %><b><%= link_to "К", '#', id: "ccontract" %></b>
+								<%               when 3 then %><b><%= link_to "X", '#', id: "rezerv" %></b>
 								<% end %>
-								<% if n <32%>
-									<td bgcolor="white"></td>
-								<% end %>
-								
-			        	<% else %>
-			        		<td bgcolor="white"></td>
-			        	<% end %>-->    
-  				
-				
-					<% @car = fc%>
-				
-		</tr>	
-		<% carnum=carnum+1 %>
-		<% n1 = n1 + 1 %>
-		<% end %>
-		</tbody>
-	</table>
-	</center>
-</body>
-</html>
+								</center>
+							    </td>
+							<% end %>						
+						<% end %>
+					</tbody>
+				</table>
+				</div>	   	
+		    </div>
+		    <!-- end of one month table -->
+	    <% end	%>              
+	  </div>
+	</div>		
+
+<% unless @mn.nil? then %>
+<script>   $(function () {$('#myTab a[href="#<%= @mn %>"]').tab('show'); }) </script>
+<% end %>
+
