--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,59 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-
-  <title>Auto</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>	
-<div class="contain-to-grid sticky">
-  <nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large">
- <div class="row" >
-  
-  
-  <div class="small-4 large-4 columns">
-  	<% if user_signed_in? %>
-  	
-  		<a style="color: "red">Текущий курс : <%= Cparam.last.curs  %>MDL за 1 USD</a>
-  	<% end %>
-  </div>
-  
-  <div class="small-4 large-4 columns" >
-  	<%
-  			@day_week_ru = ""
-		  	if Time.now.strftime("%A") == "Monday"
-		  		@day_week_ru = "Понедельник"	
-		  	elsif Time.now.strftime("%A") == "Tuesday"
-		  		@day_week_ru = "Вторник"	
-		  	elsif Time.now.strftime("%A") == "Wednesday"
-		  		@day_week_ru = "Среда"
-		  	elsif Time.now.strftime("%A") == "Thursday"
-		  		@day_week_ru = "Четверг"
-		  	elsif Time.now.strftime("%A") == "Friday"
-		  		@day_week_ru = "Пятница"
-		  	elsif Time.now.strftime("%A") == "Saturday"
-		  		@day_week_ru = "Суббота"
-		  	elsif Time.now.strftime("%A") == "Sunday"
-		  		@day_week_ru = "Воскресение"	
-		  	end					
-  	%>
-  	<a style="color: "red">Сегодня: <%= @day_week_ru%> <%= DateTime.now.strftime('%d.%m.%Y') %></a>
-  </div>
-  
-  <div class="small-2 large-3 columns">
-  	<% if user_signed_in? %>
-  		<%= link_to 'Выход', destroy_user_session_path, :method => :delete%>
-  	<% end %>
-  </div>
-  
-</div>
-
- </nav>
-</div>
-
-
-	<%= yield %>
-</body>
+	<head>
+	  <title><%= full_title(yield(:title)) %></title>
+	  <%= favicon_link_tag 'holub-ifon.png' %>
+	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	  <%= csrf_meta_tags %>
+	  <%= render 'layouts/shim' %>
+	</head>
+	<body>
+  	<%= render 'layouts/header' %>
+    <div class="container-fluid">
+    	<div class="row">
+    		  <nav class="navbar"><ul class="nav nav-pills pull-left"><li></li></ul></nav>
+    		  <nav class="navbar"><ul class="nav nav-pills pull-left"><li></li></ul></nav>		    	
+	      	  <%= render 'layouts/messages' %>	  
+	    	  <%= yield %> 
+	    	  <%= render 'layouts/footer' %> 
+	    </div>	 
+     </div>   <!-- /container -->      
+   </body>
 </html>
